--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.1.17",
     "@nestjs/typeorm": "^10.0.1",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
     "express-session": "^1.17.3",
     "mysql2": "^3.6.5",
     "passport": "^0.7.0",
@@ -37,6 +40,7 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "sequelize-typescript": "^2.1.6",
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
